# Transformations-Subsystem

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml  release.yml  test.yml
src/ncrl/: Calculation.py  DockerEngine.py  ICalculation.py  InputFile.py  Molecule.py  OrcaCalculation.py  OrcaDockerCalculation.py  OrcaDockerEngine.py  OrcaInputFile.py  XYZFile.py  __init__.py
tests/: test_Calculation.py  test_ICalculation.py  test_InputFile.py  test_Molecule.py  test_OrcaCalculation.py  test_OrcaDockerCalculation.py  test_OrcaInputFile.py
