[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "ncrl"
version = "0.0.1"
description = "A Python Library developed for Nano Car Racing"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "MrDNAlex", email = "mr.dnalex.2003@gmail.com" }]
keywords = ["nanotech", "chem", "utils"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Typing :: Typed",
]

dependencies = [
    # "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy", "build", "twine"]

# If you want a CLI: installs a console command named `your-lib`
[project.scripts]
ncrl = "your_lib.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ncrl"]
